ws_moveit/src/Diana7/include/DianaAPI.h

DIANA_API int addMoveJByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *target_joints,
                               /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveJByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *target_pose,
                             /*IN*/ double vel_percent, /*IN*/ double acc_percent, /*IN*/ double blendradius_percent,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveCByTarget(/*IN*/ unsigned int complex_path_id, /*IN[7]*/ double *pass_joints,
                               /*IN[7]*/ double *target_joints, /*IN*/ double vel, /*IN*/ double acc,
                               /*IN*/ double blendradius, /*IN*/ bool ignore_rotation,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int addMoveCByPose(/*IN*/ unsigned int complex_path_id, /*IN[6]*/ double *pass_pose,
                             /*IN[6]*/ double *target_pose, /*IN*/ double vel, /*IN*/ double acc,
                             /*IN*/ double blendradius, /*IN*/ bool ignore_rotation,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int runComplexPath(/*IN*/ unsigned int complex_path_id, /*IN*/ const char *strIpAddress = "");
DIANA_API int destroyComplexPath(/*IN*/ unsigned int complex_path_id, /*IN*/ const char *strIpAddress = "");
DIANA_API int saveEnvironment(const char *strIpAddress = "");
/*************************************** version 0.10 ***************************************/

DIANA_API int dumpToUDiskEx(/*IN*/ double timeout_second, /*IN*/ const char *strIpAddress = "");
DIANA_API int enterForceMode_ex(/*IN[3]*/ double *dblForceDirection, /*[IN]*/ double dblForceValue,
                                /*[IN]*/ double dblMaxApproachVelocity, /*[IN]*/ double dblMaxAllowTcpOffset,
                                /*IN[6]*/ double *dblActiveTcp = nullptr, /*IN*/ const char *strIpAddress = "");
DIANA_API int readDI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int readAI(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*OUT*/ int &mode, /*OUT*/ double &value,
                     /*IN*/ const char *strIpAddress = "");
DIANA_API int setAIMode(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode,
                        /*IN*/ const char *strIpAddress = "");
DIANA_API int writeDO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int writeAO(/*IN*/ const char *groupName, /*IN*/ const char *IOName, /*IN*/ int mode, /*IN*/ double value,
                      /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusCurrent(/*OUT*/ double &current, /*IN*/ const char *strIpAddress = "");
DIANA_API int readBusVoltage(/*OUT*/ double &voltage, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.1***************************************/

DIANA_API int getDH(/*OUT[7]*/ double *aDH, /*OUT[7]*/ double *alphaDH, /*OUT[7]*/ double *dDH,
                    /*OUT[7]*/ double *thetaDH, /*IN*/ const char *strIpAddress = "");
DIANA_API int getOriginalJointTorque(/*OUT[7]*/ double *torques, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJacobiMatrix(/*OUT[42]*/ double *matrix_jacobi, /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.2***************************************/

DIANA_API int resetDH(const char *strIpAddress = "");
/*************************************** version 1.3***************************************/

DIANA_API int runProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int stopProgram(const char *programName, /*IN*/ const char *strIpAddress = "");
DIANA_API int getVariableValue(const char *variableName, double &value, /*IN*/ const char *strIpAddress = "");
DIANA_API int setVariableValue(const char *variableName, const double &value, /*IN*/ const char *strIpAddress = "");